--- a/style.css
+++ b/style.css
@@ -69,10 +69,10 @@ body {
   left: -65px;
 }
 
-/* .food-list {
+.food-list {
   display: flex;
-  flex-wrap: wrap;
-} */
+
+}
 
 .picture-list {
   list-style: none;
